force-app/main/default/objects/Renewal_Notifications__c/Renewal_Notifications__c.object-meta.xml
<CustomObject>
    <label>Renewal Notifications</label>
    <nameField>
        <label>Renewal Notifications Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Renewal Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>