force-app/main/default/objects/Renewal_Notifications__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SAA_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>