force-app/main/default/objects/Renewal_Notifications__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>