force-app/main/default/objects/Renewal_Notifications__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>SAA_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>