force-app/main/default/objects/Renewal_Notifications__c/fields/Email_Actual_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Actual_Sent_Date__c</fullName>
    <label>Email Actual Sent Date</label>
    <type>DateTime</type>
</CustomField>