force-app/main/default/objects/Renewal_Notifications__c/fields/Email_Schedule_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Schedule_Send_Date__c</fullName>
    <label>Email Schedule Send Date</label>
    <type>Date</type>
</CustomField>