force-app/main/default/objects/Renewal_Notifications__c/fields/Fee_Increase_Contact__c.field-meta.xml
<CustomField>
    <fullName>Fee_Increase_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fee Increase Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>SAA_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>