force-app/main/default/objects/Renewal_Notifications__c/fields/Notification_Failed__c.field-meta.xml
<CustomField>
    <fullName>Notification_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification Failed</label>
    <type>Checkbox</type>
</CustomField>