force-app/main/default/objects/Renewal_Notifications__c/fields/Uplift_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Uplift_Effective_Date__c</fullName>
    <label>Uplift Effective Date</label>
    <type>Date</type>
</CustomField>