force-app/main/default/objects/Renewal_Notifications__c/fields/Uplift_Percent__c.field-meta.xml
<CustomField>
    <fullName>Uplift_Percent__c</fullName>
    <label>Uplift Percent</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>